// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFilterButton does not render a badge or count if numFilters is not passed 1`] = `
<div
  class="euiFilterButton__wrapper css-1bvxi87-wrapper-isIconOnly"
>
  <button
    aria-label="aria-label"
    class="euiButtonEmpty euiFilterButton euiFilterButton-isIconOnly testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    />
  </button>
</div>
`;

exports[`EuiFilterButton props badgeColor renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1bvxi87-wrapper-isIconOnly"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    />
  </button>
</div>
`;

exports[`EuiFilterButton props grow can be turned off 1`] = `
<div
  class="euiFilterButton__wrapper css-1nag8c-wrapper-isIconOnly-noGrow"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    />
  </button>
</div>
`;

exports[`EuiFilterButton props iconType and iconSide renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1bvxi87-wrapper-isIconOnly"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content-hasIcon"
    >
      <span
        color="inherit"
        data-euiicon-type="user"
      />
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props isDisabled renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1bvxi87-wrapper-isIconOnly"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-disabled-isDisabled-euiFilterButton-isIconOnly"
    data-test-subj="button"
    disabled=""
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    />
  </button>
</div>
`;

exports[`EuiFilterButton props isSelected renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1bvxi87-wrapper-isIconOnly"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-isSelected euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    />
  </button>
</div>
`;

exports[`EuiFilterButton props numActiveFilters and hasActiveFilters renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1bvxi87-wrapper-isIconOnly"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-hasActiveFilters-isIconOnly"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="5 active filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-accent-euiFilterButton__notification"
          role="marquee"
        >
          5
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props numFilters renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1r66fqw-wrapper-hasNotification-isIconOnly"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-hasNotification euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="5 available filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-subdued-euiFilterButton__notification"
          role="marquee"
        >
          5
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiFilterButton props type renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1bvxi87-wrapper-isIconOnly"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    />
  </button>
</div>
`;

exports[`EuiFilterButton props withNext renders 1`] = `
<div
  class="euiFilterButton__wrapper css-152vodj-wrapper-withNext-isIconOnly"
>
  <button
    class="euiButtonEmpty euiFilterButton euiFilterButton-isIconOnly emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    />
  </button>
</div>
`;

exports[`EuiFilterButton renders 1`] = `
<div
  class="euiFilterButton__wrapper css-1bvxi87-wrapper-isIconOnly"
>
  <button
    aria-label="aria-label"
    class="euiButtonEmpty euiFilterButton euiFilterButton-isIconOnly testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    />
  </button>
</div>
`;

exports[`EuiFilterButton renders zero properly 1`] = `
<div
  class="euiFilterButton__wrapper css-1r66fqw-wrapper-hasNotification-isIconOnly"
>
  <button
    aria-label="aria-label"
    class="euiButtonEmpty euiFilterButton euiFilterButton-hasNotification euiFilterButton-isIconOnly testClass1 testClass2 emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-isIconOnly-euiTestCss"
    data-test-subj="test subject string"
    type="button"
  >
    <span
      class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
    >
      <span
        class="euiThemeProvider emotion-euiColorMode-LIGHT"
      >
        <span
          aria-label="0 available filters"
          class="euiNotificationBadge euiFilterButton__notification emotion-euiNotificationBadge-s-subdued-euiFilterButton__notification"
          role="marquee"
        >
          0
        </span>
      </span>
    </span>
  </button>
</div>
`;
